@@ -22,6 +22,7 @@ import com.frostwire.jlibtorrent.TorrentInfo;
 import com.frostwire.regex.Pattern;
 import com.frostwire.search.torrent.TorrentCrawlableSearchResult;
 import com.frostwire.search.torrent.TorrentCrawledSearchResult;
+import com.frostwire.search.torrent.TorrentSearchResult;
 import com.frostwire.util.Logger;
 import com.frostwire.util.StringUtils;
 
@@ -266,8 +267,7 @@ public final class PerformersHelper {
                 } else if (j == 0) {
                     dp[i][j] = i;
                 } else {
-                    dp[i][j] = Math.min(dp[i - 1][j - 1] + costOfSubstitution(a.charAt(i - 1), b.charAt(j - 1)),
-                            Math.min(dp[i - 1][j] + 1, dp[i][j - 1] + 1));
+                    dp[i][j] = Math.min(dp[i - 1][j - 1] + costOfSubstitution(a.charAt(i - 1), b.charAt(j - 1)), Math.min(dp[i - 1][j] + 1, dp[i][j - 1] + 1));
                 }
             }
         }
@@ -302,7 +302,19 @@ public final class PerformersHelper {
             int distance1 = levenshteinDistance(normalizedResult1, currentQuery.toLowerCase());
             int distance2 = levenshteinDistance(normalizedResult2, currentQuery.toLowerCase());
             LOG.info(String.format("sortByRelevance() distance to \"{}\" distance1: " + distance1 + " == distance2: ", currentQuery) + distance2);
-            return Integer.compare(distance1, distance2); // smallest distance first for descending order
+
+            if (distance1 != distance2 || (!(o1 instanceof TorrentSearchResult))) {
+                Integer.compare(distance1, distance2); // smallest distance first for descending order
+            }
+
+            if (o1 instanceof TorrentSearchResult) {
+                TorrentSearchResult tsr1 = (TorrentSearchResult) o1;
+                TorrentSearchResult tsr2 = (TorrentSearchResult) o2;
+                if (tsr1.getSeeds() != tsr2.getSeeds()) {
+                    return Integer.compare(tsr2.getSeeds(), tsr1.getSeeds());
+                }
+            }
+            return Integer.compare(distance1, distance2);
         });
 
         return sortedResults;
